# sat-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: autocomplete.rs  commands.rs  database.rs  main.rs  n2yo.rs  util.rs
src/commands/: location.rs  mod.rs  upcoming.rs  watch.rs
